docs-archive/apache-airflow-providers-sftp/5.6.0/_sources/_api/airflow/providers/sftp/sensors/sftp/index.rst.txt
airflow.providers.sftp.sensors.sftp
===================================

.. py:module:: airflow.providers.sftp.sensors.sftp

.. autoapi-nested-parse::

   This module contains SFTP sensor.



Classes
-------

.. autoapisummary::

   airflow.providers.sftp.sensors.sftp.SFTPSensor


Module Contents
---------------

.. py:class:: SFTPSensor(*, path, file_pattern = '', newer_than = None, sftp_conn_id = 'sftp_default', python_callable = None, op_args = None, op_kwargs = None, use_managed_conn = True, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Waits for a file or directory to be present on SFTP.

   :param path: Remote file or directory path
   :param file_pattern: The pattern that will be used to match the file (fnmatch format)
   :param sftp_conn_id: The connection to run the sensor against
   :param newer_than: DateTime for which the file or file path should be newer than, comparison is inclusive
   :param python_callable: Optional callable that will be called after files are found. The callable
       will receive the found files list in ``op_kwargs['files_found']`` if ``op_kwargs`` is provided
       and not empty. The return value of the callable will be stored in XCom along with the
       files_found list.
   :param op_args: A list of positional arguments that will get unpacked when calling your callable
       (templated). Only used when ``python_callable`` is provided.
   :param op_kwargs: A dictionary of keyword arguments that will get unpacked in your callable
       (templated). If provided and not empty, the ``files_found`` list will be automatically added
       to this dictionary. Only used when ``python_callable`` is provided.
   :param deferrable: If waiting for completion, whether to defer the task until done, default is ``False``.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('path', 'file_pattern', 'newer_than')



   .. py:attribute:: path


   .. py:attribute:: file_pattern
      :value: ''



   .. py:attribute:: hook
      :type:  airflow.providers.sftp.hooks.sftp.SFTPHook | None
      :value: None



   .. py:attribute:: sftp_conn_id
      :value: 'sftp_default'



   .. py:attribute:: newer_than
      :type:  datetime.datetime | str | None
      :value: None



   .. py:attribute:: use_managed_conn
      :value: True



   .. py:attribute:: python_callable
      :type:  collections.abc.Callable | None
      :value: None



   .. py:attribute:: op_args
      :value: []



   .. py:attribute:: op_kwargs


   .. py:attribute:: deferrable


   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)

      Execute callback when the trigger fires; returns immediately.

      Relies on trigger to throw an exception, otherwise it assumes execution was
      successful.



